k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-app
  template:
    metadata:
      labels:
        app: url-app
    spec:
      containers:
        - name: url-app
          image: amansahni05/url-shortner:latest 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
