k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: url-app
